<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">调试助手</string>
    <string name="app_radio">收音机调试助手</string>
    <string name="app_state">声音状态调试助手</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="main_source">主通道</string>
	<string name="aux_source">AUX通道</string>
	<string name="bt_source">蓝牙通道</string>
	<string name="fm_source">收音机通道</string>
	<string name="tv_source">DVD通道</string>
	<string name="ipod_source">IPod通道</string>
	<string name="input_gain_add">输入增益+</string>
	<string name="input_gain_sub">输入增益-</string>
	<string name="subw_add">重低音+</string>
	<string name="subw_sub">重低音-</string>
	<string name="main_gain_add">主音量+</string>
	<string name="main_gain_sub">主音量-</string>
	<string name="mix_add">主音量-</string>
	<string name="mix_sub">主音量-</string>
	<string name="fl_gain_add">前左增益+</string>
	<string name="fl_gain_sub">前左增益-</string>
	<string name="bass_q_add">BassQ+</string>
	<string name="bass_q_sub">BassQ-</string>
	<string name="fr_gain_add">前右增益+</string>
	<string name="fr_gain_sub">前右增益-</string>
	<string name="mid_q_add">MidQ+</string>
	<string name="mid_q_sub">MidQ-</string>
	<string name="rl_gain_add">后左增益+</string>
	<string name="rl_gain_sub">后左增益-</string>
	<string name="rr_gain_add">后右增益+</string>
	<string name="rr_gain_sub">后右增益-</string>
	<string name="treble_q_add">TrebleQ+</string>
	<string name="treble_q_sub">TrebleQ-</string>
	<string name="bass_add">Bass+</string>
	<string name="bass_sub">Bass-</string>
	<string name="mid_add">Mid+</string>
	<string name="mid_sub">Mid-</string>
	<string name="treble_add">Treble+</string>
	<string name="treble_sub">Treble-</string>
	<string name="loudness_add">Loud+</string>
	<string name="loudness_sub">Loud-</string>
	<string name="light_left">"灯光-"</string>
	<string name="light_right">"灯光->"</string>
	<string name="defauL">DEFAULT</string>
	<string name="open">打开</string>
	<string name="close">关闭</string>
	<string name="audio_source_tip">打开和关闭通道必须成对出现，打开多少次就要关闭多少次</string>
	<string name="mode_tip">点击按钮设置当前的运行模式到MCU</string>
	<string name="mode_tv">T V</string>
	<string name="mode_main">Main</string>
	<string name="mode_radio">Radio</string>
	<string name="mode_ktv">K T V</string>
	<string name="mode_music">Music</string>
	<string name="mode_movie">Movie</string>
	<string name="mode_navi">Navi</string>
	<string name="mode_avin">Avin</string>
	<string name="mode_back">Back</string>
	<string name="mode_bluetooth">Bluetooth</string>
	<string name="mode_front_avin">Front Avin</string>
	<string name="mode_dvd">DVD</string>
	<string name="mode_usb">USB</string>
	<string name="mode_sdcard">SDCard</string>
	<string name="mode_photo">Photo</string>
	<string name="mode_eq">EQ</string>
	<string name="mode_a2dp">A2DP</string>
	<string name="mode_cmmb">CMMB</string>
	<string name="mode_ipod">IPod</string>
	<string name="mode_vdisc">VDISC</string>
	<string name="mode_plug_dvd">Plug Dvd</string>
	<string name="mode_avm">AVM</string>
	<string name="mode_ie">IE</string>
	<string name="mode_wifi_settings">Wifi Settings</string>
	<string name="mode_help">Help</string>
	<string name="mode_hdmi">HDMI</string>
	<string name="mode_car_switch">Car Switch</string>
	<string name="mode_atv">atv</string>
	<string name="mode_other">OtherView</string>
	<string name="mode_dvr">DVR</string>
	<string name="mode_back_review">Back Review</string>
	<string name="audio_source_debug">音频通道调试</string>
	<string name="running_mode_debug">运行模式调试</string>
	<string name="navi_gain_add">导航压低+</string>
	<string name="navi_gain_sub">导航压低-</string>
	<string name="radio_area">收音区域</string>
	<string name="freq">频率</string>
	<string name="band">波段</string>
	<string name="stereo">立体声</string>
	<string name="loc">本地</string>
	<string name="seek_up">Seek up</string>
	<string name="seek_down">Seek Down</string>
	<string name="scan_up">Scan up</string>
	<string name="scan_down">Scan Down</string>
	<string name="scan_save">Scan Save</string>
	<string name="taiguo">泰国</string>
	<string name="eluosi">俄罗斯</string>
	<string name="riben">日本</string>
	<string name="beimeizhou">北美洲</string>
	<string name="ladingmeizhou">拉丁美洲</string>
	<string name="ouzhou">欧洲</string>
	<string name="navi_start">导航播报开始</string>
	<string name="navi_end">导航播报结束</string>
	<string name="phone_start">电话开始</string>
	<string name="phone_end">电话结束</string>
	<string name="reversing_start">开车开始</string>
	<string name="reversing_end">倒车结束</string>
	<string name="voice_start">语音识别开始</string>
	<string name="voice_end">语音识别结束</string>
</resources>
